--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to my First Application</h1>
-<p>Sign Up <%=link_to "here","#"%>.</p>
+<div class="jumbotron">
+	<h1>Welcome to my First Application</h1>
+	<p>Click here to <%=link_to "Sign Up","#", class: "btn btn-danger"%></p>
+</div>
